--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build-css": "tailwindcss build -i styles/main.css -o public/styles.css --watch"
+    "build-css": "tailwindcss build -i styles/main.css -o stylesheet.css --watch"
   },
   "keywords": [],
   "author": "",
